# rustdroid

./: .gitignore  README.md  generate_mock_boot.py
.antigravitycli/: 99969b38-de06-4d01-8a85-07c6334b9595.json
.github/workflows/: build-apk.yml
assets/: init.rustdroid.rc
assets/module_template/: module.prop  post-fs-data.sh  service.sh
assets/sepolicy/: README.md
c/: CMakeLists.txt  README.md
c/include/: rustdroid_c.h
c/src/: android_glue.c  mount_glue.c  process_glue.c  selinux_glue.c
manager/android/: README.md  gradle.properties  settings.gradle.kts
manager/android/app/: build.gradle.kts  proguard-rules.pro
manager/android/app/src/main/: AndroidManifest.xml
manager/android/app/src/main/cpp/: CMakeLists.txt  boot_image_parser.c  boot_image_patcher.c  checksum.c  native_bridge.c  native_log.c  ramdisk_handler.c
manager/android/app/src/main/cpp/include/: boot_image_parser.h  boot_image_patcher.h  checksum.h  native_log.h  ramdisk_handler.h
manager/android/app/src/main/java/com/rustdroid/manager/: MainActivity.kt  NativeBridge.kt
manager/android/app/src/main/java/com/rustdroid/manager/data/: SettingsRepository.kt
manager/android/app/src/main/java/com/rustdroid/manager/ui/: MainViewModel.kt  UiState.kt
manager/android/app/src/main/java/com/rustdroid/manager/ui/components/: Components.kt
manager/android/app/src/main/java/com/rustdroid/manager/ui/screen/: EmptyState.kt  HomeScreen.kt  LogScreen.kt  ModulesScreen.kt  PatchFlowScreen.kt  SettingsScreen.kt  SuperuserScreen.kt
manager/android/app/src/main/java/com/rustdroid/manager/ui/theme/: AppTheme.kt
manager/android/app/src/main/res/xml/: file_paths.xml
manager/android/app/src/test/java/com/rustdroid/manager/ui/: HomeUiStateTest.kt
manager/android/gradle/: libs.versions.toml
rust/: Cargo.toml  README.md
rust/crates/rustdroid-audit/: Cargo.toml
rust/crates/rustdroid-audit/src/: lib.rs
rust/crates/rustdroid-boot/: Cargo.toml
rust/crates/rustdroid-boot/src/: audit.rs  cpio.rs  header.rs  injection.rs  lib.rs  patch.rs  patch_plan.rs  ramdisk.rs  report.rs
rust/crates/rustdroid-common/: Cargo.toml
rust/crates/rustdroid-common/src/: lib.rs
rust/crates/rustdroid-core/: Cargo.toml
rust/crates/rustdroid-core/src/: lib.rs
rust/crates/rustdroid-daemon/: Cargo.toml
rust/crates/rustdroid-daemon/src/: exec.rs  main.rs
rust/crates/rustdroid-daemon/tests/: daemon_tests.rs
rust/crates/rustdroid-module/: Cargo.toml
rust/crates/rustdroid-module/src/: lib.rs
rust/crates/rustdroid-mount/: Cargo.toml
rust/crates/rustdroid-mount/src/: lib.rs
rust/crates/rustdroid-policy/: Cargo.toml
rust/crates/rustdroid-policy/src/: lib.rs
rust/crates/rustdroid-su/: Cargo.toml
rust/crates/rustdroid-su/src/: main.rs
scripts/: adb-validate.sh  boot-validation-checklist.sh  build-android.sh  build-c.sh  build-rust.sh  compatibility-check.sh  package.sh  post-boot-validate.sh  release-gate.sh  security-scan.sh  test-boot-patch.sh
