[workspace]
resolver = "2"
members = [
    "crates/rustdroid-core",
    "crates/rustdroid-boot",
    "crates/rustdroid-daemon",
    "crates/rustdroid-su",
    "crates/rustdroid-policy",
    "crates/rustdroid-module",
    "crates/rustdroid-mount",
    "crates/rustdroid-audit",
    "crates/rustdroid-common",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libc = "0.2"
log = "0.4"
jni = { version = "0.21.1", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
# Inner crates references
rustdroid-common = { path = "crates/rustdroid-common" }
rustdroid-audit = { path = "crates/rustdroid-audit" }
rustdroid-boot = { path = "crates/rustdroid-boot" }
rustdroid-policy = { path = "crates/rustdroid-policy" }
rustdroid-module = { path = "crates/rustdroid-module" }
rustdroid-mount = { path = "crates/rustdroid-mount" }
rustdroid-daemon = { path = "crates/rustdroid-daemon" }
rustdroid-su = { path = "crates/rustdroid-su" }
rustdroid-core = { path = "crates/rustdroid-core" }
