[package]
name = "rustdroid-boot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rustdroid-common = { workspace = true }
rustdroid-audit = { workspace = true }
serde_json = { workspace = true }
flate2 = { version = "1.0", features = ["rust_backend"] }
sha2 = "0.10"
lz4_flex = "0.11"
