[package]
name = "rustdroid-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustdroid-core-cli"
path = "src/bin/rustdroid-core-cli.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustdroid-common = { workspace = true }
rustdroid-audit = { workspace = true }
rustdroid-boot = { workspace = true }
rustdroid-policy = { workspace = true }
rustdroid-module = { workspace = true }
rustdroid-mount = { workspace = true }
jni = { workspace = true }
